--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 "psycopg2-binary" = "*"
-itsdangerous = ">=0.24,<1.0.0"
+itsdangerous = "==1.1.0"
 Flask = "*"
 Flask-Session = "*"
 SQLAlchemy = "*"
